--- a/angular-web-app/src/app/components/painting-card/painting-card.component.scss
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.scss
@@ -1,17 +1,18 @@
 @import "../../../variables";
 
 .painting-card {
-  margin: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-height: calc(100% - 30px);
   max-width: calc(100% - 30px);
+  margin: 15px;
   overflow: hidden;
 }
 
 .painting-card-img {
   max-width: 100%;
   max-height: 100%;
-  object-position: 50% 50%;
-  object-fit: cover;
   border-radius: 5px;
 }
 
@@ -47,6 +48,3 @@
 .painting-card:hover img {
   transform: scale(1.25);
 }
-
-
-
